# AI-ML-GC-RND

./: .env.example  .gitignore  CLAUDE.md  Master_Template.pptx  PROMPT.md  README.md  Test Company Name_ANALYSIS.json  analyze.py  check_models.py  generate_citations.py  generate_ppt.py  ingest.py  main.py  ppt_engine.py  pyproject.toml  requirements.txt  utils.py
Final_Submissions/: Test Company Name_GammaKiller.pptx  Test Company Name_Teaser.pptx  Test Company Name_Teaser_Atomic.pptx  Test Company Name_Teaser_Final.pptx  Test Company Name_Teaser_Gamma.pptx  Test Company Name_Teaser_V3.pptx  ~$Test Company Name_Teaser_Final.pptx
docs/superpowers/plans/: 2026-05-16-phase-a-foundation.md  2026-05-16-phase-b-agents-and-graph.md  2026-05-17-phase-c-stage-1-polish.md  (+1 more)
prompts/: anonymizer.md  chart_designer.md  composer.md  critic.md  image_curator.md  planner.md  sector_classifier.md
src/kelp_teaser/: cli.py  config.py
src/kelp_teaser/agents/: anonymizer.py  (+9 more)
tests/fixtures/: ksolves_minimal.py  stub_llm.py
tests/unit/: test_anonymizer.py  test_branding.py  test_build_graph.py  test_chart_designer.py  test_charts.py  test_citation_tracker.py  test_citations_doc.py  test_cli_smoke.py  test_composer_helpers.py  test_config.py  test_critic.py  test_deck_render.py  test_graph_nodes.py  test_graph_state.py  test_image_curator_helpers.py  test_ingestor.py  test_llm.py  test_planner_helpers.py  test_prompt_loader.py  test_researcher_helpers.py  test_schemas.py  test_sector_classifier_helpers.py  test_slide_components.py  test_theme.py  test_tools.py  test_trace.py
(+22 files in other folders)
