[project]
name = "kelp-teaser"
version = "0.2.0"
description = "Agentic M&A teaser generation pipeline"
requires-python = ">=3.11"
dependencies = [
    "python-pptx>=0.6.23",
    "python-docx>=1.1.0",
    "google-generativeai>=0.8.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.0",
    "llama-parse>=0.5.0",
    "tavily-python>=0.5.0",
    "pandas>=2.2.0",
    "openpyxl>=3.1.2",
    "Pillow>=10.4.0",
    "lxml>=5.3.0",
    "pydantic>=2.9.0",
    "jinja2>=3.1.4",
    "langgraph>=0.2.50",
    "langchain-core>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
kelp-teaser = "kelp_teaser.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
